main.css
/* ... */
.bid-button:hover:not(.show-none):not(:active) {
	/*border-color: rgba(255, 255, 255, 0.7);*/
	/*box-shadow: inset 0px 0px 2px 0px rgba(255, 255, 255, 0.3);*/
	background-color: rgba(0, 0, 0, 0);
	box-shadow: 0px 0px 2px 0px rgba(255, 255, 255, 0.2), inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5);
}
.bid-button > .inner {
	width: 88px;
	height: 88px;
	position: relative;
	left: 0px;
	top: 0px;
	transition: top 0.5s;
	-webkit-transition: top 0.5s;
	-moz-transition: top 0.5s;
	-o-transition: top 0.5s;
}
.bid-button.right > .inner {
	top: -88px;
}
.bid-button.show-none {
	cursor: default;
}
.bid-button.show-none > .inner {
	top: 88px;
}
.bid-button.right.show-none > .inner {
	top: -176px;
}
.bid-button > .inner > * {
	width: 88px;
	height: 88px;
}
.bid-button > .inner > * > * {
	text-align: center;
	vertical-align: middle;
	text-transform: uppercase;
	/*color: white;*/
}
.bid-button .letter {
	line-height: 56px;
	font-size: 5.6em;
	text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5);
}
.bid-button .text {
	line-height: 32px;
	font-size: 2.4em;
	text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
}
@keyframes fade-in {
	from { opacity: 0; }
	to { opacity: 1; }
}
@-webkit-keyframes fade-in {
	from { opacity: 0; }
	to { opacity: 1; }
}
@-moz-keyframes fade-in {
	from { opacity: 0; }
	to { opacity: 1; }
}
@-o-keyframes fade-in {
	from { opacity: 0; }
	to { opacity: 1; }
}

.card {
	display: block;
	position: absolute;
	/*left: -48px;
	top: -48px;*/
	width: 96px;
	height: 96px;
	font-family: Arial;
	transition: left 1s, top 1s, bottom 1s, right 1s;
	-webkit-transition: left 1s, top 1s, bottom 1s, right 1s;
	-moz-transition: left 1s, top 1s, bottom 1s, right 1s;
	-o-transition: left 1s, top 1s, bottom 1s, right 1s;
}
.card .front, .card .back {
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	position: absolute;
	left: 0px;
	top: 0px;
	width: 96px;
	height: 96px;
	border-radius: 8px;
	background-color: white;
}
.card:not(.flipped) > * {
	box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.5);
}
.card.flipped > * {
	box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.5);
}
.card .front {
	transition: opacity 0s linear 0.25s;
	-webkit-transition: box-shadow 1s, opacity 0s linear 0.25s;
	-moz-transition: opacity 0s linear 0.25s;
	-o-transition: opacity 0s linear 0.25s;
}
.card .front {
	text-align: center;
}
.card .front > * {
	vertical-align: middle;
}
.card .front .rank {
	padding-top: 12px;
	font-size: 7.2em;
	line-height: 56px;
}
.card .front .suit {
	font-size: 2.4em;
	line-height: 24px;
	/*padding-bottom: 4px;*/
}
.card .front .suit {
	display: inline-block;
	width: 14.5px;
	height: 20px;
	background-image: url(suits.svg);
	background-size: 32.5px 42px;
	background-repeat: no-repeat;
	background-position: -1.5px 0;
}
.card .front .suit.spades {
	background-position: -16px -19px;
}
.card .front .suit.hearts {
	background-position: -1.5px -19px;
}
.card .front .suit.diamonds {
	background-position: -16px 0;
}
.card .front .red {
	color: red;
}
.card .front.suit-words .rank {
	padding-top: 12px;
	font-size: 7.2em;
	line-height: 60px;
}
.card .front.suit-words .suit {
	font-size: 1.2em;
	line-height: 24px;
	padding-bottom: 0px;
}
.card .back {
	transition: opacity 0s linear 0.25s;
	-webkit-transition: opacity 0s linear 0.25s;
	-moz-transition: opacity 0s linear 0.25s;
	-o-transition: opacity 0s linear 0.25s;
	background-color: black;
	border: 28px solid white;
}
@keyframes card-front-flip {
	from { transform: perspective(500px) rotateY(180deg); }
	to { transform: perspective(500px) rotateY(0deg); }
}
@keyframes card-back-flip {
	from { transform: perspective(500px) rotateY(0deg); }
	to { transform: perspective(500px) rotateY(-180deg); }
}
@-webkit-keyframes card-front-flip {
	from { -webkit-transform: perspective(500px) rotateY(180deg); }
	to { -webkit-transform: perspective(500px) rotateY(0deg); }
}
@-webkit-keyframes card-back-flip {
	from { -webkit-transform: perspective(500px) rotateY(0deg); }
	to { -webkit-transform: perspective(500px) rotateY(-180deg); }
}
@-moz-keyframes card-front-flip {
	from { -moz-transform: perspective(500px) rotateY(180deg); }
	to { -moz-transform: perspective(500px) rotateY(0deg); }
}
@-moz-keyframes card-back-flip {
	from { -moz-transform: perspective(500px) rotateY(0deg); }
	to { -moz-transform: perspective(500px) rotateY(-180deg); }
}
@-o-keyframes card-front-flip {
	from { -o-transform: perspective(500px) rotateY(180deg); }
	to { -o-transform: perspective(500px) rotateY(0deg); }
}
@-o-keyframes card-back-flip {
	from { -o-transform: perspective(500px) rotateY(0deg); }
	to { -o-transform: perspective(500px) rotateY(-180deg); }
}
.card:not(.flipped) .front {
	opacity: 0;
}
.card:not(.flipped) .back {
	opacity: 1;
}
.card.flipped .front {
	animation: card-front-flip 0.5s linear 0s;
	-webkit-animation: card-front-flip 0.5s linear 0s;
	-moz-animation: card-front-flip 0.5s linear 0s;
	-o-animation: card-front-flip 0.5s linear 0s;
	opacity: 1;
}
.card.flipped .back {
	animation: card-back-flip 0.5s linear 0s;
	-webkit-animation: card-back-flip 0.5s linear 0s;
	-moz-animation: card-back-flip 0.5s linear 0s;
	-o-animation: card-back-flip 0.5s linear 0s;
	opacity: 0;
}

.chip {
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	position: absolute;
	width: 48px;
	height: 48px;
	border-radius: 50%;
	/*background-color: rgba(255, 255, 255, 0.1);*/
	background-color: white;
	z-index: 10;
	transition: left 1s, top 1s, bottom 1s, right 1s, transform 1s ease-out;
	-webkit-transition: left 1s, top 1s, bottom 1s, right 1s, -webkit-transform 1s ease-out;
	-moz-transition: left 1s, top 1s, bottom 1s, right 1s, -moz-transform 1s ease-out;
	-o-transition: left 1s, top 1s, bottom 1s, right 1s, -o-transform 1s ease-out;
}
.chip.webkit {
	border: 4px dashed black;
	box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.5);
	padding: 2px;
}
.chip.webkit::after {
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	display: block;
	content: "";
	width: 100%;
	height: 100%;
	border-radius: 50%;
	border: 1px dashed black;
}
/* ... */

